--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,7 +18,7 @@ html
 {
      max-width: 100%;
      height: 100vh;
-     background:linear-gradient(to top,var(--color),transparent),url('/assets/image/banner.jpg');
+     background:linear-gradient(to top,var(--color),transparent),url('assets/image/banner.jpg');
      background-size:cover;
      background-position: center;
     
@@ -328,14 +328,14 @@ h4::after
 
 .all-service .actor-service:nth-child(1)
 {position: relative;
- background-image: url('/assets/image/pic-1.jpg');
+ background-image: url('assets/image/pic-1.jpg');
  background-size: cover;
  background-position: center;
  border-radius: 10px;
 }
 .all-service .actor-service:nth-child(2)
 {position: relative;
- background-image: url('/assets/image/pic-2.jpg');
+ background-image: url('assets/image/pic-2.jpg');
  background-size: cover;
  background-position: center;
  margin-left: 27px;
@@ -343,7 +343,7 @@ border-radius: 10px;
 }
 .all-service .actor-service:nth-child(3)
 {position: relative;
- background-image: url('/assets/image/pic-3.jpg');
+ background-image: url('assets/image/pic-3.jpg');
 
 background-size: cover;
  background-position: center;
@@ -354,7 +354,7 @@ background-size: cover;
 .all-service .actor-service:nth-child(4)
 {
 position: relative;
- background-image: url('/assets/image/pic-4.jpg');
+ background-image: url('assets/image/pic-4.jpg');
  background-size: cover;
  background-position: center;
  margin-left: 27px;
