--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -19,8 +19,7 @@ html
      max-width: 100%;
      height: 100vh;
      background:linear-gradient(to top,var(--color),transparent),url('assets/image/banner.jpg');
-     background-size:cover;
-     background-position: center;
+     background-size:100% 100%;
     
      
      
@@ -329,15 +328,13 @@ h4::after
 .all-service .actor-service:nth-child(1)
 {position: relative;
  background-image: url('assets/image/pic-1.jpg');
- background-size: cover;
- background-position: center;
+ background-size: 100% 100%;
  border-radius: 10px;
 }
 .all-service .actor-service:nth-child(2)
 {position: relative;
  background-image: url('assets/image/pic-2.jpg');
- background-size: cover;
- background-position: center;
+ background-size: 100% 100%;
  margin-left: 27px;
 border-radius: 10px;
 }
@@ -345,8 +342,7 @@ border-radius: 10px;
 {position: relative;
  background-image: url('assets/image/pic-3.jpg');
 
-background-size: cover;
- background-position: center;
+ background-size: 100% 100%;
  margin-top: 20px;
  border-radius: 10px;
 
@@ -355,8 +351,7 @@ background-size: cover;
 {
 position: relative;
  background-image: url('assets/image/pic-4.jpg');
- background-size: cover;
- background-position: center;
+  background-size: 100% 100%;
  margin-left: 27px;
  margin-top: 20px;
  border-radius: 10px;
