--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,7 +18,7 @@ html
 {
      max-width: 100%;
      height: 100vh;
-     background:linear-gradient(to top,var(--color),transparent),url('../assets/image/banner.jpg');
+     background:linear-gradient(to top,var(--color),transparent),url('.image/banner.jpg');
      background-size:100% 100%;
     
      
