--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -340,7 +340,7 @@ border-radius: 10px;
 }
 .all-service .actor-service:nth-child(3)
 {position: relative;
- background-image: url('assets/image/pic-3.jpg');
+ background-image: url('../assets/image/pic-3.jpg');
 
  background-size: 100% 100%;
  margin-top: 20px;
