--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,7 +18,7 @@ html
 {
      max-width: 100%;
      height: 100vh;
-     background:linear-gradient(to top,var(--color),transparent),url('./assets/image/banner.jpg');
+     background:linear-gradient(to top,var(--color),transparent),url('/assets/image/banner.jpg');
      background-size:100% 100%;
     
      
@@ -340,7 +340,7 @@ border-radius: 10px;
 }
 .all-service .actor-service:nth-child(3)
 {position: relative;
- background-image: url('../assets/image/pic-3.jpg');
+ background-image: url('assets/image/pic-3.jpg');
 
  background-size: 100% 100%;
  margin-top: 20px;
