--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -20,6 +20,7 @@ html
      height: 100vh;
      background-size:100% 100%;
     
+
 }
 #banner .bg
 {  position: absolute;
@@ -29,6 +30,7 @@ html
     bottom: 0;
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
 #banner .overlay
 {  
@@ -40,6 +42,7 @@ html
     width: 100%;
     height: 100%;
     background:linear-gradient(to top,var(--color),transparent);
+    z-index: 1;
    
 }
 #banner .logo{
@@ -47,6 +50,7 @@ html
     width: 140px;
     top:10%;
     left: 15%;
+    z-index: 2;
 }
 #banner  .text-btn
 {
@@ -61,11 +65,12 @@ html
     width: 100%;
 }
 #banner  .text-btn .text
-{
+{   position: relative;
     font-family:'Kaushan Script';
     color: #fff;
     font-size: 150px;
     font-weight: 500;
+    z-index: 3;
 
 }
 #banner  .text-btn .subtext
@@ -189,6 +194,7 @@ html
     flex-direction: column;
     top: 200px;
     left: 50%;
+    z-index: 100;
     transform: translateX(-50%);
     }
     #banner .text-btn .btn .btn-element:nth-child(1) {
